<resources>
    <string name="app_name">NeRecipe</string>
    <string name="title_book">Book</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_edit">Edit</string>
    <string name="title_recipe">Recipe</string>
    <string name="title_new">New recipe</string>
    <string name="user_avatar_description">User avatar</string>
    <string name="preview">Preview</string>
    <string name="add_recipe">Add recipe</string>
    <string name="menu_button">Menu</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="enter_title">Enter title</string>
    <string name="favorite">Favorite</string>
    <string name="enter_recipe">Enter recipe</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="title_categories_fragment">Categories</string>
    <string name="add_next_step">Add next step</string>
    <string name="empty">Empty</string>
    <string name="author">Author</string>
    <string name="category">Category</string>
    <string name="recipe_title">Recipe title</string>
    <string name="give_a_name_to_the_step">Give a name to the step</string>
    <string name="describe_the_step_in_detail">Describe the step in detail</string>
    <string name="add_step_picture">Add step picture</string>
    <string name="think_of_a_name">Think of a name</string>
    <string name="add_recipe_picture">Add recipe picture</string>
</resources>