<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/headRecipeCard"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="@dimen/spacing_12dp"
        app:cardCornerRadius="@dimen/spacing_12dp"
        app:cardElevation="@dimen/elevation_4dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/editablePictureRecipe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/secondaryColor"
                android:contentDescription="@string/preview"
                android:scaleType="centerCrop" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/userAvatar"
                style="@style/Widget.AppTheme.author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="false"
                android:contentDescription="@string/user_avatar_description"
                app:layout_constraintBottom_toBottomOf="@id/author"
                app:layout_constraintStart_toStartOf="@id/editablePictureRecipe"
                app:layout_constraintTop_toTopOf="@id/author" />

            <TextView
                android:id="@+id/author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/author"
                android:singleLine="true"
                app:layout_constraintBottom_toBottomOf="@id/menuButton"
                app:layout_constraintEnd_toStartOf="@id/menuButton"
                app:layout_constraintStart_toEndOf="@id/userAvatar"
                app:layout_constraintTop_toTopOf="@id/menuButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/menuButton"
                style="@style/Widget.AppTheme.menuButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:contentDescription="@string/menu_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/recipeViewCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/category"
                android:singleLine="true"
                app:layout_constraintBottom_toTopOf="@id/recipeViewTitle"
                app:layout_constraintStart_toStartOf="@id/recipeViewTitle" />

            <TextView
                android:id="@+id/recipeViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_12dp"
                android:ellipsize="end"
                android:gravity="start"
                android:hint="@string/recipe_title"
                android:singleLine="true"
                android:textSize="@dimen/title_text_size_24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/favoriteButton"
                app:layout_constraintEnd_toStartOf="@id/favoriteButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/favoriteButton"
                app:layout_constraintVertical_chainStyle="spread" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/favoriteButton"
                style="@style/Widget.AppTheme.favoriteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:contentDescription="@string/favorite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipeContentLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headRecipeCard"
        tools:listitem="@layout/recipe_step_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>