<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button"
        style="@style/Widget.AppTheme.add_step_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_common_spacing"
        android:contentDescription="@string/add_next_step"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_common_spacing"
        android:contentDescription="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_check_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cancelButton"
        style="@style/Widget.AppTheme.cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_common_spacing"
        android:contentDescription="@string/cancel"
        app:layout_constraintBottom_toTopOf="@id/ok_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_close_24" />

    <TextView
        android:id="@+id/category"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/background"
        app:layout_constraintEnd_toEndOf="@id/title_recipe"
        app:layout_constraintStart_toStartOf="@id/title_recipe" />

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="#E8E8E8"
        android:layout_margin="@dimen/big_common_spacing"
        android:contentDescription="@string/preview"
        android:elevation="@dimen/elevation"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/preview"
        android:layout_width="@dimen/user_avatar_size"
        android:layout_height="@dimen/user_avatar_size"
        android:clickable="true"
        android:elevation="@dimen/elevation"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/background"
        app:layout_constraintEnd_toEndOf="@id/background"
        app:layout_constraintStart_toStartOf="@id/background"
        app:layout_constraintTop_toTopOf="@id/background"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <EditText
        android:id="@+id/title_recipe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="start"
        android:hint="@string/enter_title"
        android:inputType="textMultiLine"
        android:textSize="@dimen/title_recipe_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/spinner"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/spinner"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        app:layout_constraintVertical_chainStyle="spread" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@id/background"
        app:layout_constraintStart_toStartOf="@id/background"
        app:layout_constraintTop_toBottomOf="@id/background" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipe_content_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/big_common_spacing"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/title_recipe"
        tools:listitem="@layout/recipe_content_edit_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>