<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/spacing_12dp"
    android:layout_marginTop="@dimen/spacing_12dp"
    android:backgroundTint="@color/secondaryColor"
    android:clipToPadding="false"
    app:cardCornerRadius="@dimen/spacing_12dp"
    app:cardElevation="@dimen/elevation_4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/recipeViewBackground"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:contentDescription="@string/preview"
            android:padding="100dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground"
            app:tint="@color/primaryColor" />

        <ImageView
            android:id="@+id/userAvatar"
            android:layout_width="@dimen/icons_size_24dp"
            android:layout_height="@dimen/icons_size_24dp"
            android:layout_margin="@dimen/spacing_12dp"
            android:contentDescription="@string/user_avatar_description"
            app:layout_constraintBottom_toBottomOf="@id/author"
            app:layout_constraintStart_toStartOf="@id/recipeViewBackground"
            app:layout_constraintTop_toTopOf="@id/author"
            app:srcCompat="@drawable/ic_baseline_person_24" />

        <TextView
            android:id="@+id/author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_12dp"
            android:ellipsize="end"
            android:hint="Автор"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="@id/menuButton"
            app:layout_constraintEnd_toStartOf="@id/menuButton"
            app:layout_constraintStart_toEndOf="@id/userAvatar"
            app:layout_constraintTop_toTopOf="@id/menuButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menuButton"
            style="@style/Widget.AppTheme.menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:contentDescription="@string/menu_button"
            app:layout_constraintEnd_toEndOf="@id/recipeViewBackground"
            app:layout_constraintTop_toTopOf="@id/recipeViewBackground" />

        <TextView
            android:id="@+id/recipeViewCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="Категория"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@id/recipeViewTitle"
            app:layout_constraintStart_toStartOf="@id/recipeViewTitle" />

        <TextView
            android:id="@+id/recipeViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_12dp"
            android:ellipsize="end"
            android:gravity="start"
            android:hint="Название"
            android:textSize="@dimen/title_text_size_24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/favoriteButton"
            app:layout_constraintEnd_toStartOf="@id/favoriteButton"
            app:layout_constraintStart_toStartOf="@id/recipeViewBackground"
            app:layout_constraintTop_toTopOf="@id/favoriteButton"
            app:layout_constraintVertical_chainStyle="spread" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/favoriteButton"
            style="@style/Widget.AppTheme.favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:contentDescription="@string/favorite"
            app:layout_constraintBottom_toBottomOf="@id/recipeViewBackground"
            app:layout_constraintEnd_toEndOf="@id/recipeViewBackground" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipeContentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/recipeViewBackground"
            tools:listitem="@layout/recipe_content_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>